@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) 2009-2010 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2009-2015 Oracle and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -42,6 +42,7 @@ package javax.mail.internet;
 
 import org.junit.*;
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertTrue;
 
 /**
  * XXX - add more tests
@@ -63,5 +64,33 @@ public class ParameterListTests {
 	System.clearProperty("mail.mime.windowsfilenames");
 	ParameterList pl = new ParameterList("; filename=\"\\a\\b\\c.txt\"");
 	assertEquals(pl.get("filename"), "abc.txt");
+    }
+
+    /**
+     * Test that a long parameter that's been split into segments
+     * is parsed correctly.
+     */
+    @Test
+    public void testLongParse() throws Exception {
+	String p0 = "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa";
+	String p1 = "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb";
+	ParameterList pl = new ParameterList("; p*0="+p0+"; p*1="+p1);
+	assertEquals(p0 + p1, pl.get("p"));
+    }
+
+    /**
+     * Test that a long parameter that's set programmatically is split
+     * into segments.
+     */
+    @Test
+    public void testLongSet() throws Exception {
+	String p0 = "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa";
+	String p1 = "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb";
+	ParameterList pl = new ParameterList();
+	pl.set("p", p0 + p1);
+	assertEquals(p0 + p1, pl.get("p"));
+	String pls = pl.toString();
+	assertTrue(pls.indexOf("p*0=") >= 0);
+	assertTrue(pls.indexOf("p*1=") >= 0);
     }
 }
